<?xml version="1.0"?>


<package format="2">
  <name>ist_slam</name>
  <version>1.0.0</version>
  <description>
    ist_slam
  </description>
    <maintainer email="ist_slam-owners@googlegroups.com">
  </maintainer>
  <license>Apache 2.0</license>

  <url></url>

    <author email="google-ist_slam@googlegroups.com">
  </author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>git</build_depend>
  <build_depend>google-mock</build_depend>
  <build_depend>python-sphinx</build_depend>

  <depend>boost</depend>
  <depend>ceres-solver</depend>
  <depend>eigen</depend>
  <depend>libcairo2-dev</depend>
  <depend>libgflags-dev</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>lua5.2-dev</depend>
  <depend>protobuf-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
