<?xml version="1.0"?>


<package format="2">
  <name>ist_slam_ros</name>
  <version>1.0.0</version>
  <description>
    ist_slam
  </description>
  <maintainer email="ist_slam-owners@googlegroups.com">
  </maintainer>
  <license>Apache 2.0</license>

  <url></url>

    <author email="google-ist_slam@googlegroups.com">
  </author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>git</build_depend>
  <build_depend>google-mock</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>python-sphinx</build_depend>

  <depend version_gte="1.0.0">ist_slam</depend>
  <depend version_gte="1.0.0">ist_slam_ros_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>libgflags-dev</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>libpcl-all-dev</depend>
  <depend>message_runtime</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>robot_state_publisher</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

  <test_depend>rosunit</test_depend>

  <export>
      <rviz plugin="${prefix}/rviz_plugin_description.xml" />
  </export>
</package>
