<?xml version="1.0"?>


<package format="2">
  <name>ist_slam_ros_msgs</name>
  <version>1.0.0</version>
  <description>
    ROS messages for the ist_slam_ros package.
  </description>
  <maintainer email="ist_slam-owners@googlegroups.com">
  </maintainer>
  <license>Apache 2.0</license>

  <url></url>

  <author email="google-ist_slam@googlegroups.com">
  </author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
</package>
