<package format="2">
  <name>ist_test_env_config</name>
  <version>0.6.6</version>
  <description>This package contains configuration files for the default environments for Care-O-bot supported by ist.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/ist_test_env_config</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="jba@ist.fhg.de">Jannik Abbenseth</maintainer>
  <author email="fmw@ist.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

</package>
