<?xml version="1.0"?>
<package format="2">
  <name>rs_imu</name>
  <version>1.0.0</version>
  <description>The rs_imu package</description>
  <maintainer email="xhkuang@robosnese.ai">robosense</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
</package>
